Fixed buffer overflow (off by one) at PicoTxt loading Prepared implementation of GUF files. Not functional yet!
git-svn-id: https://svn.viathinksoft.com/svn/filter_foundry/trunk@537 1b5a0048-3058-4200-831f-25aa9e3a14b9

--- a/language_win.rc
+++ b/language_win.rc
@@ -82,6 +82,9 @@ STRINGTABLE
 	MSG_ABOUT_BUILT_USING_ID, MSG_ABOUT_BUILT_USING_ENUS
 	MSG_ABOUT_LATEST_VERSION_FROM_ID, MSG_ABOUT_LATEST_VERSION_FROM_ENUS
 	MSG_ABOUT_CONTACT_AUTHOR_ID, MSG_ABOUT_CONTACT_AUTHOR_ENUS
+	MSG_OPEN_GUF_ID, MSG_OPEN_GUF_ENUS
+	MSG_SAVE_GUF_ID, MSG_SAVE_GUF_ENUS
+	MSG_INCOMPATIBLE_GUF_FILE_ID, MSG_INCOMPATIBLE_GUF_FILE_ENUS
 }
 
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
@@ -146,5 +149,8 @@ STRINGTABLE
 	MSG_ABOUT_BUILT_USING_ID, MSG_ABOUT_BUILT_USING_DEDE
 	MSG_ABOUT_LATEST_VERSION_FROM_ID, MSG_ABOUT_LATEST_VERSION_FROM_DEDE
 	MSG_ABOUT_CONTACT_AUTHOR_ID, MSG_ABOUT_CONTACT_AUTHOR_DEDE
+	MSG_OPEN_GUF_ID, MSG_OPEN_GUF_DEDE
+	MSG_SAVE_GUF_ID, MSG_SAVE_GUF_DEDE
+	MSG_INCOMPATIBLE_GUF_FILE_ID, MSG_INCOMPATIBLE_GUF_FILE_DEDE
 
 }
